tests/should_fail/paramter_count_b.c
int function(int a, ...);

int main(void) {
	function();
}
